# kinosite_rk

./: db.sqlite3  pyproject.toml
cars/: settings.py  urls.py
engineering/: RestUrls.py  RestViews.py  api.py  serializers.py  urls.py  views.py
engineering/templates/movies/: movie_detail.html
